--- a/src/Components/Comments/comments.css
+++ b/src/Components/Comments/comments.css
@@ -33,23 +33,6 @@
     font-size: 0.9rem;
     color: var(--color2);
 }
-.shared-box-info{
-    font-size:  var(--header-font-size-4);
-}
-.shared-box{
-    min-height: 3rem;
-    padding : var(--section-padding);
-    background: var(--background-color-3);
-    color: var(--color2);
-    font-size:  var(--header-font-size-5);
-}
-.shared-description{
-    font-size: var(--header-font-size-2);
-    color: var(--color4);
-}
-.sharedname{
-    font-size: var(--header-font-size-4);
-}
 .more-btn{
     padding: var(--btn-padding);
     border : none;
@@ -163,8 +146,8 @@
 
 .options-box{
     position: absolute;
-    top: 3rem;
-    right: 0;
+    top: 2rem;
+    right: 0rem;
     padding : var(--section-padding);
     background: var(--background-color-2);
     box-shadow:
@@ -175,7 +158,7 @@
     
 
 }
-.close-btn{
+.close-options{
     font-size: var(--icon-size2);
     color: var(--color-close);
     float: right;
@@ -215,76 +198,4 @@
     border: none;
     margin : var(--btn-margin);
     width: 1.2rem
-}
-
-.share-box{  
-    width: 100%; 
-    height: 100vh;
-    position: fixed;
-    top:0;
-    left : 0;
-    z-index: 11;
-    transition: all 0.7s;
-    background: rgba(53, 56, 54, 0.7);
-    padding-top: 10rem;
-}
-
-.share-box-inner{
-    width: 20rem;
-    margin:0 auto;
-    display: flex;
-    justify-content: space-around;
-}
-.shared-item{
-    margin-top: var(--section-padding);
-    min-height: 5rem;
-    overflow: auto;
-}
-.share-input{
-    border-radius: var(--box-border-radius);
-    width: 100%;
-    min-height: 15rem;
-    position: relative;
-    background:var(--background-color-2);
-    padding : 0.1rem;
-    padding: var(--section-padding);
-}
-
-.shared-content{
-    padding : var(--input-padding);
-    font-size: var(--header-font-size-4);
-}
-
-.share-input-box{
-    box-sizing: border-box;
-    width: 100%;
-    height: 5rem;
-    padding: 0.2rem;
-    border: 1px solid var(--color);
-    position: relative;
-}
-.share-input-box:focus{
-    outline: none;
-}
-
-.share-btn{
-    float: right;
-}
-
-.title2{
-    color:var(--color2);
-    font-size: var(--header-font-size-2);
-    text-align: center;
-    position: absolute;
-    top: var(--section-padding);
-    left : 50%;
-    transform: translateX(-50%);
-}
-
-
-@media screen and (max-width : 450px ){
-    .share-box-inner{
-        width: 95%;
-
-     }
 }
