--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,10 @@
     --btn-margin : 0 0.2rem;
     --btn-padding : 0.2rem 1rem;
     --btn-padding-2 : 0.6rem 1.2rem;
+    --btn-padding-3 : 0.2rem 0.5rem;
     --btn-font-size : 1rem;
-    --btn-font-size-2 : 0.6rem;
+    --btn-font-size-2 : 0.8rem;
+    --btn-font-size-3 : 0.4rem;
     --btn-font-weight : 600;
     --color : #8899aa;
     --color2 : #446;
@@ -47,8 +49,11 @@
     --logo-font-size : 1.4rem;
     --page-padding : 2rem;
     --page-title1 : 2rem;
-    --scrollbar-track : #c5c5c5;
-    --scrollbar-thumb : #8899aa;
+    /* --scrollbar-track : #c5c5c5; */
+    --scrollbar-track : #f4f4f4;
+    /* --scrollbar-thumb : #8899aa; */
+    --scrollbar-thumb : #606060;
+    --scrollbar-thumb-hover : #909090;
     --section-margin : 1rem;
     --section-padding : 1rem;
     --section-padding-2 : 0.4rem;
@@ -65,4 +70,22 @@ body{
     background : var(--background-color);
     padding: 0;
 }
+
+::-webkit-scrollbar{
+    width: 0.7rem;
+    height: 10px;
+}
+::-webkit-scrollbar-track{
+    height: 10px;
+    background: var(--scrollbar-track)
+}
+::-webkit-scrollbar-thumb{
+    background: var(--scrollbar-thumb);
+    border-radius: 3rem;
+}
+
+/* ::-webkit-scrollbar-thumb:hover{
+    background: var(--scrollbar-thumb-hover);
+    border-radius: 3rem;
+} */
 
