--- a/src/Pages/Home/homepage.css
+++ b/src/Pages/Home/homepage.css
@@ -125,6 +125,32 @@
     background: red;
 }
 
+.lazyloader{
+    display: grid;
+    align-items: center;
+}
+
+.post-img-preview-box{
+    position: absolute;
+    left: 50%;
+    top: -15rem;
+    transform: translateX(-50%);
+    width: 90%;
+    height: 15rem;
+    display: grid;
+    place-items: center;
+    background: gray;
+    z-index: 3;
+ 
+}
+
+.post-img-preview-2{
+    margin-top: 40rem;
+    width: 100%;
+    /* height: 20rem; */
+    /* margin : 0 auto; */
+    object-fit: cover;
+}
 
 
 @media screen and (max-width : 600px){
