--- a/src/Pages/UserProfile/userprofile.css
+++ b/src/Pages/UserProfile/userprofile.css
@@ -8,22 +8,23 @@
     display: flex;
     color: var(--color4);
 }
-.profile-img-box{
-    display: flex;
-    justify-content: space-between;
-    padding: 1rem;
-    position: absolute;
-    top: 13.5rem;
-    left: 1rem;
-    z-index: 2;
-    min-width: calc(100% - 2rem);
-    box-sizing: border-box;
-    
-}
 .cover-image{
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+.profile-img-box{
+    display: flex;
+    align-items: center;
+    padding: 0 1rem;
+    position: absolute;
+    top: 13.5rem;
+    left: 1rem;
+    z-index: 2;
+    max-width: calc(100% - 2rem);
+    box-sizing: border-box;
+    
+ 
 }
 .profile-img{
     width: 10rem;
@@ -33,12 +34,142 @@
     margin-right: 2rem;
     border : 0.3rem solid var(--background-color-3)
 }
+.profile-img-2{
+    display: inline;
+    width: 3rem;
+    height: 3rem;
+    object-fit: cover;
+    border-radius: 50%;
+    float : left;
+    margin-bottom: 0.7rem;
+    /* border : 0.3rem solid var(--background-color-3); */
+    border : 0.2rem solid var(--color);
+}
+.img-upload-icon{
+    cursor: pointer;
+    color:var(--color2);
+    font-size: 2rem;
+    position: absolute;
+    right: 1rem;
+    top: -1rem
+}
+.cover-img-preview{
+    width: 20rem;
+    height: 20rem;
+    margin : 0 auto;
+    object-fit: cover;
+    
+}
+.profile-img-preview{
+    width: 20rem;
+    height: 20rem;
+    margin : 0 auto;
+    object-fit: cover;
+}
+.post-img-preview{
+    width: 12rem;
+    height: 12rem;
+    margin : 0 auto;
+    object-fit: cover;
+}
+
+.profile-label-box{
+    position: relative;
+    height: auto;
+    height: 4rem;
+    width: 10rem;
+}
+.profile-label-box-inner{
+    position: relative;
+    top: -2rem;
+    width: 100%;
+    height: 100%;
+    min-width: calc(100% - 2rem);
+    
+}
+.cover-label-box{
+    float:right;
+    position: relative;
+    height: auto;
+    height: 4rem;
+    width: 10rem;
+    margin-top: -4rem;
+    display: grid;
+    place-items: center;
+    /* background: red; */
+}
+.cover-label-box-inner{
+    position: absolute;
+    right: 0;
+    z-index: 3;
+    /* width: 100%;
+    height: 100%; */
+    /* min-width: calc(100% - 2rem);
+    background: green; */
+}
+.cover-img-preview-box{
+    position: absolute;
+    left: 50%;
+    top: 4rem;
+    transform: translateX(-50%);
+    width: 50vw;
+    height: 20rem;
+    display: grid;
+    place-items: center;
+    background: gray;
+    z-index: 3;
+ 
+}
+.profile-img-preview-box{
+    position: absolute;
+    left: 50%;
+    top: -10rem;
+    transform: translateX(-50%);
+    width: 50vw;
+    height: 20rem;
+    display: grid;
+    place-items: center;
+    background: gray;
+    z-index: 10;
+ 
+}
+
+.post-img-preview-box{
+    position: absolute;
+    left: 50%;
+    top: -15rem;
+    transform: translateX(-50%);
+    width: 90%;
+    height: 15rem;
+    display: grid;
+    place-items: center;
+    background: gray;
+    z-index: 3;
+ 
+}
+.pic-upload-btn{
+    display: flex;
+    justify-content: space-between;
+}
+.username{
+    font-size: 1.4rem;
+    margin-top: -4rem;
+}
 .profile-summary{
     text-align: left;
-    width: 70%;
+    justify-content: left;
+    transform: translateX(-10rem);
+    width: 10rem;
+    height: 10rem;
     padding: var(--section-padding);
     display: flex;
     align-items: center;
+    display: none;
+}
+.profile-summary-desktop{
+    position: absolute;
+    top: 8rem;
+    left: 13rem
 }
 .profile-left-border, .profile-right-border{
     flex : 3;
@@ -120,12 +251,13 @@
     margin : 0 auto
 }
 .profile-center-left , .profile-center-right{
-    background: red;
+    /* background: red; */
 }
 .profile-center-input{
     font-size: 1.1rem;
     width:70%;
     border: none;
+    margin-top: 1.5rem;
     margin-left: 1rem; 
     background: var(--background-color-2);
     
@@ -135,14 +267,13 @@
 }
 .profile-center-input-icon{
     color: #58ce68;
-    
+    margin-right: 0.4rem;
+    cursor: pointer;
 }
 .profile-center-input-item{
     display: flex;
     align-items: center;
-}
-.profile-center-input-icon{
-    margin-right: 0.4rem;
+    cursor: pointer;
 }
 
 .profile-center-input:focus{
@@ -180,6 +311,7 @@
 }
 .post-btn{
     width: 15%;
+    cursor: pointer;
     height: var(--btn-height);
     background: var(--background-color);
     /* font-size: var(--btn-font-size); */
@@ -196,6 +328,15 @@
     top: 6rem;
     right : 0;
     align-items: center;
+}
+.other-userbtn1{
+    display: none;
+    margin-right: 1rem ;
+}
+
+.other-userbtn2{
+    display: block;
+    margin-top: -3rem;
 }
 .btn{
     font-weight: 600;
@@ -221,6 +362,15 @@
 }
 .btn:hover{
     opacity: 1
+}
+.pagination-btn{
+    font-weight: 600;
+    cursor: pointer;
+    padding : var(--btn-padding-4);
+    width: 3rem;
+    border-radius: var(--btn-border-radius);
+    border:none;
+    opacity: 0.9;
 }
 
 .icons-box{
@@ -268,14 +418,30 @@
 }
 .follow-name{
     position: absolute;
-    color:var(--color4);
+    color : var(--color5);
     bottom: 1.5rem;
     width: 100%;
     font-size: var(--button-font-size-20);
-    /* background : var(--background-color-4); */
+    background : var(--background-color-4);
     z-index: 2;
 }
 
+@media screen and (max-width : 1191px){
+    .other-userbtn2{
+        margin-top: -2rem;
+    }
+}
+
+@media screen and (max-width : 900px){
+    .profile-summary{
+    transform: translateX(0);
+ }
+}
+@media screen and (max-width : 800px){
+    .profile-summary{
+    transform: translateX(5vw);
+ }
+}
 @media screen and (max-width : 600px){
     .profile-left-border, .profile-right-border{
         display: none;
@@ -285,8 +451,99 @@
     }
     .profile-img-box{
         justify-content: center;
+        width: calc(100% - 15rem);
     }
     .profile-summary{
         width: 50%;
+        align-items: center;
+        margin: 0 auto;
+        padding-left: 0;
+    }
+    .profile-img{
+        width: 5rem;
+        height: 5rem;
+    }
+    .img-upload-icon{
+        position: absolute;
+        font-size: 2rem;
+        left: 3rem;
+        top: 0rem
+    }
+    .username{
+        font-size: 1.4rem;
+        /* text-align: center;
+        background: green; */
+        width: 9rem;
+        height: 3rem;
+    }
+    .followings{
+        text-align: center;
+        /* background: green; */
+        width: 10rem;
+        height: 3rem;
+    }
+    .cover-img-preview-box{
+        position: fixed;
+        left: 0%;
+        transform: translateX(0%);
+        width: 100vw;
+        height: 20rem;
+        display: grid;
+        place-self: center;
+    }
+    .profile-img-preview-box{
+        position: fixed;
+        left: 0%;
+        transform: translateX(0%);
+        width: 100vw;
+        height: 20rem;
+        display: grid;
+        place-self: center;
+    }
+    .other-userbtn1{
+        display: block;
+       }
+    .other-userbtn2{
+           display: none;
+       }
+    .btn{
+        width: 7rem;
+        padding : var(--btn-padding-4);
+        margin-top: -2rem;
+        margin-right: 1rem;
+    }
+
+    .profile-center-right{
+        margin: 0;
+        padding: 0;
+    }
+    .profile-left-border, .profile-right-border{
+        margin: 0;
+        padding: 0;
+    }
+    .profile-center-inner-left, .profile-center-inner-right{
+        padding: 0rem;
+        margin: 0;
+        width: 100%;
+        
+    }
+    .profile-center-inner-right{
+        margin-top: 24rem;
+    }
+    .cover-label-box-inner{
+        right: auto
+    }
+}
+@media screen and (max-width : 599px){
+    .profile-summary{
+        display: block;
+    }
+    .profile-summary-desktop{
+        display: none;
+    }
+}
+@media screen and (max-width : 400px){
+    .profile-img-box{
+        padding: 0;
     }
 }
