--- a/src/Components/Comments/comments.css
+++ b/src/Components/Comments/comments.css
@@ -17,12 +17,15 @@
     margin-left: 1rem;
     font-size: 1.2rem;
 }
+
 .post-top{
     display: flex;
 }
-.profile-pic{
-    width: 3rem;
-    height: 3rem;
+.comment-pic{
+    float: left;
+    margin-right:.5rem;
+    width: 2rem;
+    height: 2rem;
     border-radius: 50%;
     border : 0.2rem solid var(--color);
     object-fit: cover;
