--- a/src/Components/OtherUsers/otherUsers.css
+++ b/src/Components/OtherUsers/otherUsers.css
@@ -1,6 +1,6 @@
 .otherUsers{
     display: flex;
-    overflow: scroll;
+    overflow-y: auto;
 }
 
 .otherUsers-inner{
@@ -28,7 +28,7 @@
 }
 
 .follow-img{
-    width:100%;
+    width:5rem;
     height: calc(100% - 1rem);
     object-fit: cover;
 }
@@ -37,7 +37,11 @@
     color:var(--color3);
     bottom: 1.2rem;
     width: 100%;
+    height: 3rem;
     opacity: 0.8;
+    display: flex;
+    align-items: flex-end;
+    overflow-x: hidden;
     background : var(--background-color-4);
     z-index: 2;
 }
@@ -57,9 +61,14 @@
     font-weight: var(  --btn-font-weight);
     font-size: var(--button-font-size-2);
     border-radius: var(--btn-border-radius);
-    background: var(--background-color);
     transition: all 0.4s;
     cursor: pointer;
+    float: right;
+    margin-right: 0.5rem;
+    width: 10rem;
+    /* position: absolute;
+    left : 0;
+    bottom: 0rem */
 }
 .more-btn:hover{
     background: var(--background-color-2);
