--- a/src/Components/OtherUsers/otherUsers.css
+++ b/src/Components/OtherUsers/otherUsers.css
@@ -13,6 +13,7 @@
     position: relative;
     font-size: 0.9rem;
     color: var(--color2);
+    border-radius: 0.3rem;
 }
 
 .follow-btn{
@@ -23,14 +24,16 @@
     font-size: var(--button-font-size-2);
     position: absolute;
     right: 0rem;
-    bottom:0;
-     border: 1px solid var(--background-color-2);
+    bottom:0rem;
+    border: 1px solid var(--background-color-2);
+    border-radius: 0 0 0.3rem 0.3rem;
 }
 
 .follow-img{
     width:5rem;
     height: calc(100% - 1rem);
     object-fit: cover;
+    border-radius: 0.3rem;
 }
 .folow-name{
     position: absolute;
@@ -50,26 +53,22 @@
     width: 100%;
     max-height: 12rem;
     overflow-y: hidden;
-    overflow-x: scroll;
+    overflow-x: auto;
     display: flex; 
     grid-template-columns: repeat(auto-fit, minmax(9rem, auto));
 }
 
 .more-btn{
-    padding: var(--btn-padding);
+    padding: 0;
     border : none;
-    font-weight: var(  --btn-font-weight);
-    font-size: var(--button-font-size-2);
+    font-weight: var(--btn-font-weight);
+    font-size: var(--connections-fontsize);
     border-radius: var(--btn-border-radius);
     transition: all 0.4s;
     cursor: pointer;
     float: right;
-    margin-right: 0.5rem;
-    width: 10rem;
-    /* position: absolute;
-    left : 0;
-    bottom: 0rem */
+    z-index: 20;
 }
 .more-btn:hover{
-    background: var(--background-color-2);
+    color: var(--background-color-2)
 }
