--- a/src/Pages/Connections/connections.css
+++ b/src/Pages/Connections/connections.css
@@ -49,7 +49,7 @@
     cursor: pointer;
     padding: var(--btn-padding);
     background: var( --button-background);
-    font-size: 0.7rem;
+    font-size: var(--connections-fontsize);
     width: 100%;
     margin-top: 0.5rem;
     /* margin-left: 0.8rem; */
