--- a/src/Pages/Follows/follows.css
+++ b/src/Pages/Follows/follows.css
@@ -19,9 +19,10 @@
     height: 11rem;
     width: 100%;
 }
-.follows-box{
+.follow-page-box{
     width: 6rem;
     margin: 0 0.2rem;
+    position: relative;
     /* background: green; */
 }
 .follows-img{
@@ -43,17 +44,17 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
-.follows-btn{
-    /* position: absolute; */
-    bottom: 0.5rem;
+.follow-page-btn{
+    width: 6rem;
     cursor: pointer;
     padding: var(--btn-padding);
     background: var( --button-background);
-    font-size: 0.7rem;
-    width: 100%;
-    margin-top: 0.5rem;
-    /* margin-left: 0.8rem; */
+    font-size: var(--connections-fontsize);
+    position: absolute;
+    left: 0rem;
+    bottom:1.2rem;
     border: 1px solid var(--background-color-2);
+    border-radius: 0 0 0.3rem 0.3rem;
 }
 .follows-btn2{
     /* position: absolute; */
