--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@
     --color-alert : rgb(223, 5, 5);
     --color-close : rgb(236, 39, 39);
     --color-success : rgb(3, 145, 15);
+    --color-picture-icon : rgb(76, 189, 41);
     --chat-padding : 0.5rem;
     --chat-padding-2 : 0.8rem;
     --chat-padding-3 : 0.5rem;
@@ -62,6 +63,7 @@
     --logo-font-size : 1.4rem;
     --page-padding : 2rem;
     --page-title1 : 2rem;
+    --preview-background : gray;
     /* --scrollbar-track : #c5c5c5; */
     --scrollbar-track : #f4f4f4;
     /* --scrollbar-thumb : #8899aa; */
