--- a/src/Pages/Connections/connections.css
+++ b/src/Pages/Connections/connections.css
@@ -25,7 +25,7 @@
     /* background: green; */
 }
 .connections-img{
-    border-radius: 50%;
+    border-radius: 10%;
     width: 6rem;
     height: 6rem;
     /* margin:0.3rem; */
@@ -54,6 +54,7 @@
     margin-top: 0.5rem;
     /* margin-left: 0.8rem; */
     border: 1px solid var(--background-color-2);
+    border-radius: 0 0 0.3rem 0.3rem;
 }
 .connect-btn2{
     /* position: absolute; */
