--- a/src/Pages/Messages/messages.css
+++ b/src/Pages/Messages/messages.css
@@ -23,7 +23,7 @@
     width:100%;
     border: 1px solid var(--color);
     background: var(--background-color-2);
-    padding: var(--input-padding2);
+    padding: var(--input-padding3);
     border-radius: var(--section-border-radius);
     margin: var(--input-margin);
     box-sizing: border-box;
@@ -43,23 +43,28 @@
     object-fit: cover;
     z-index: 1;
 }
+
+.homepage-center-input-icon{
+    color: var(--color-picture-icon)
+}
+.homepage-center-input-icon-2{
+    color: var(--color2)
+}
+
 .compose-center-input2{
     display: none;
 }
-.message-img-preview-box{
-    /* position: relative;
-    width: 50vw;
-    height: 50vh;
-    background-color: orange;
-    margin: 0 auto;
-    display: grid;
-    place-items: center;
-     */
- 
+.message-profile-img-2{
+    margin-right: auto;
+    border-radius: 50%;
+    width: 2.7rem;
+    height: 2.7rem;
+    position: relative;
+    object-fit: cover;
 }
 .message-img-preview-2{
-    margin-top: 5rem;
-    width: 30rem;
+    /* margin-top: 5rem; */
+    width: 100%;
     z-index: 1;
     object-fit: cover;
     /* position: absolute;
@@ -74,6 +79,19 @@
     position:relative
 }
 
+.message-input-icon-picture{
+    /* margin-right: 0.4rem; */
+    color: var(--color-picture-icon)
+}
+.message-input-icon-pictur-2{
+    color: var(--color2)
+}
+
+.preview-bottom{
+    display: flex;
+    width: 100%;
+    align-items: center;
+}
 
 
 /* Inbox */
@@ -123,14 +141,22 @@
 }
 
 .inbox-photo{
-    width: 3rem;
-    height: 3rem;
+    width: 2rem;
+    height: 2rem;
     border-radius: 50%;
+    margin-right: 0.5rem;
     border : 0.2rem solid var(--color);
     object-fit: cover;
 }
+.inbox-items{
+    margin-left : 0.6rem;
+    color: var(--color2);
+    font-size: 1rem;
+    display: flex;
+    align-items: center;
+}
 .inbox-name{
-    margin-left : 0.6rem
+    text-decoration: none;
 }
 .inbox-userbox{
     display : flex;
@@ -147,7 +173,14 @@
 .connect-link{
     text-decoration: none;
 }
-
+.no-message{
+    color: var(--color2);
+}
+.message-header{
+    color: var(--color2);
+    text-decoration: none;
+    font-size: 1.1rem;
+}
 /* Chat */
 
 
@@ -297,7 +330,8 @@
 }
 .msg-img-upload-icon{
     cursor: pointer;
-    color:var(--color6);
+    /* color:var(--color6); */
+    color: var(--color-picture-icon);
     font-size: 1.4rem;
     position: absolute;
     right: 2rem;
@@ -323,21 +357,36 @@
 }
 
 .message-img-preview-box{
-    width: 100vw;
+    position: absolute;
+    left: 50%;
+    border-radius: 0.3rem;
+    padding: var(--input-padding);
+    box-sizing: border-box;
+    transform: translateX(-50%);
+    width: 37.5%;
+    height: auto;
     display: grid;
     place-items: center;
-    height: 100vh;
+    background: var(--preview-background);
+    top: 7rem;
+    z-index: 3;
+    box-shadow:
+  0.6px 2.8px 2.2px rgba(0, 0, 0, 0.056),
+  1.5px 6.7px 5.3px rgba(0, 0, 0, 0.081),
+  2.8px 12.5px 10px rgba(0, 0, 0, 0.1),
+  4.9px 22.3px 17.9px rgba(0, 0, 0, 0.119),
+  9.2px 41.8px 33.4px rgba(0, 0, 0, 0.144),
+  22px 100px 80px rgba(0, 0, 0, 0.2);
+
 }
 
 .preview-container{
-    background: rgba(100, 100, 100, 0.5);
-    width: 100%; 
+    background: var(--preview-background);
     position: fixed;
-    top: 0rem;
-    z-index : 3;
-    height: 100vh;
-    display: grid ;
-    place-items : center
+    top:0;
+    bottom:0;
+    left:0;
+    right: 0
 }
 
 .reply-box{
@@ -396,7 +445,7 @@
         width: 100vw;
     }
     .message-img-preview-2{
-        width: 100vw;
+        width: 100%;
     }
     .reply-box{
         width: 100%;
@@ -405,7 +454,14 @@
         /* height: 140vh; */
         /* margin-top: 25rem; */
     }
+    .message-img-preview-box{
+        width: 100%;
+        left: 0;
+        transform: translateX(0%);
+        top: 5rem;
+    }
 }
+
 
 @media screen and (max-width: 400px){
     .compose-center-form{
