--- a/src/Pages/Home/homepage.css
+++ b/src/Pages/Home/homepage.css
@@ -176,9 +176,10 @@
 .homepage-right{
     flex : 3;
     position: sticky;
-    top: 10rem;
-    height: 100vh;
-    background: red;
+    top: 5rem;
+    height: calc(100vh - 6rem);
+    overflow-y: scroll;
+    background: var(--ad-background)
 }
 
 .lazyloader{
