--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
     --background-color-3 : #e7e7dd;
     --background-color-4 : linear-gradient(to top, rgb(28, 30, 32), rgba(197, 197, 206, 0.3));
     --border-color  : rgb(30,40,50);
+    --border-color-2 : rgba(30, 40, 50, 0.527);
     --box-border-radius: 0.5rem;
     --btn-border-radius: 0.2rem;
     --button-background : #a3a0a0;
@@ -64,6 +65,7 @@
     --page-padding : 2rem;
     --page-title1 : 2rem;
     --preview-background : gray;
+    --ad-background : rgba(124, 124, 177, 0.26);
     /* --scrollbar-track : #c5c5c5; */
     --scrollbar-track : #f4f4f4;
     /* --scrollbar-thumb : #8899aa; */
