--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
     --background-color-3 : #e7e7dd;
     --background-color-4 : linear-gradient(to top, rgb(28, 30, 32), rgba(197, 197, 206, 0.3));
     --border-color  : rgb(30,40,50);
+    --border-color-2 : rgba(30, 40, 50, 0.527);
     --box-border-radius: 0.5rem;
     --btn-border-radius: 0.2rem;
     --button-background : #a3a0a0;
@@ -31,6 +32,7 @@
     --color-alert : rgb(223, 5, 5);
     --color-close : rgb(236, 39, 39);
     --color-success : rgb(3, 145, 15);
+    --color-picture-icon : rgb(76, 189, 41);
     --chat-padding : 0.5rem;
     --chat-padding-2 : 0.8rem;
     --chat-padding-3 : 0.5rem;
@@ -62,6 +64,8 @@
     --logo-font-size : 1.4rem;
     --page-padding : 2rem;
     --page-title1 : 2rem;
+    --preview-background : gray;
+    --ad-background : rgba(124, 124, 177, 0.26);
     /* --scrollbar-track : #c5c5c5; */
     --scrollbar-track : #f4f4f4;
     /* --scrollbar-thumb : #8899aa; */
