--- a/src/Components/LeftNavigation/left-navigation.css
+++ b/src/Components/LeftNavigation/left-navigation.css
@@ -12,10 +12,42 @@
 }
 .homepage-left-li{
     text-decoration: none;
-    color:var(--color2)
+    color:var(--color2);
+    /* width: 100%; */
+    /* padding: 0.3rem; */
+    /* width:40rem; */
+    margin: 0.2rem 0;
+}
+.homepage-left-li:hover{
+    background: var(--background-color-3);
+    
+
 }
 .left-nav{
-    font-size: 1rem;
-    color:var(--color2);
+    /* font-weight: 600; */
+    font-size: 0.9rem;
     text-decoration: none;
+}
+.left-nav-inner{
+    font-size: 1.1rem;
+    font-weight: 600;
+    padding: 0.5rem 0;
+    border-radius: 0 0.5rem 0.5rem 0;
+    background: var(--background-color);
+    color:var(--color);
+    
+}
+.left-nav-inner-active{
+    font-size: 1.1rem;
+    font-weight: 600;
+    padding: 0.5rem 0;
+    border-radius: 0 0.5rem 0.5rem 0;
+    background: var(--background-color-3);
+    color:var(--color-7);
+}
+
+@media screen and (max-width: 940px){
+    .page-left-inner{
+        display: none;   
+    }
 }
