--- a/src/Components/OtherUsers/otherUsers.css
+++ b/src/Components/OtherUsers/otherUsers.css
@@ -1,42 +1,47 @@
 .otherUsers{
     display: flex;
     overflow-y: auto;
+    background-color: var(--preview-background);
 }
 
-.otherUsers-inner{
+.other-users-inner{
     min-width: 6rem;
     height: 10rem;
     margin : 0.3rem;
-    background: var(--background-color-3);
+    background: var(--background-color-9);
     display: block;
     text-align: center;
     position: relative;
     font-size: 0.9rem;
     color: var(--color2);
     border-radius: 0.3rem;
+    padding: 0.25rem;
+    box-sizing: border-box;
 }
 
 .follow-btn{
-    width: 100%;
+    width: 90%;
     cursor: pointer;
+    color: var(--color-7);
     padding: var(--btn-padding);
-    background: var( --button-background);
+    background: var( --background-color-2);
     font-size: var(--button-font-size-2);
     position: absolute;
-    right: 0rem;
-    bottom:0rem;
+    right: 0.3rem;
+    bottom:0.2rem;
     border: 1px solid var(--background-color-2);
-    border-radius: 0 0 0.3rem 0.3rem;
+    border-radius: 0 0 0.2rem 0.2rem;
+    
 }
 
-.follow-img{
-    width:5rem;
-    height: calc(100% - 1rem);
+.others-img{
+    width: 20rem;
+    height: 6rem;
+    /* margin:0.3rem; */
     object-fit: cover;
-    border-radius: 0.3rem;
 }
-.folow-name{
-    position: absolute;
+.others-name{
+    /* position: absolute;
     color:var(--color3);
     bottom: 1.2rem;
     width: 100%;
@@ -46,10 +51,24 @@
     align-items: flex-end;
     overflow-x: hidden;
     background : var(--background-color-4);
+    z-index: 2; */
+
+    text-transform: capitalize;
+    padding-left: 0.3rem;
+    position: absolute;
+    color:var(--color3);
+    top: 6.5rem;
+    width: auto;
+    opacity: 0.8;
+    z-index: 2;
+    width: 6rem;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
     z-index: 2;
 }
 
-.users-box{
+.other-users-box{
     width: 100%;
     max-height: 12rem;
     overflow-y: hidden;
@@ -72,3 +91,7 @@
 .more-btn:hover{
     color: var(--background-color-2)
 }
+
+
+
+
