--- a/src/Pages/Messages/messages.css
+++ b/src/Pages/Messages/messages.css
@@ -1,4 +1,3 @@
-
 /* Compose */
 .compose-center{
     padding: var(--section-padding);
@@ -19,6 +18,7 @@
     margin-left: 10%;
     margin-top: -3rem;
 }
+
 .forminput{
     width:100%;
     border: 1px solid var(--color);
@@ -27,7 +27,8 @@
     border-radius: var(--section-border-radius);
     margin: var(--input-margin);
     box-sizing: border-box;
-    font-size: 1.1rem;
+    font-size: 0.8rem;
+    color: var(--color-7);
 }
 .forminput{
     outline: none;
@@ -102,6 +103,53 @@
     background: var(--ad-background)
 }
 
+.name{
+    text-transform: capitalize;
+    font-size: 0.9rem;
+    display: flex;
+    align-items: center;
+    margin: 0.5rem 0;
+}
+
+.users-search{
+    width: 100%;
+    border:none;
+    border-radius: 0.2rem;
+    color:var(--color-7);
+    font-size: 0.9rem;
+    font-weight: 600;
+    padding: var(--input-padding3);
+    box-sizing: border-box;
+    text-transform: capitalize;
+}
+.users-search:focus{
+    outline : none;
+    border: 1px solid var(--color);
+}
+.users-list{
+    position: absolute;
+    width: 51%; 
+    height: 10rem; 
+    overflow: auto;
+    background: var(--background-color);
+    z-index: 2;
+    box-shadow:
+    0px 3.4px 2.7px rgba(0, 0, 0, 0.022),
+    0px 8.7px 6.9px rgba(0, 0, 0, 0.031),
+    0px 17.7px 14.2px rgba(0, 0, 0, 0.039),
+    0px 36.5px 29.2px rgba(0, 0, 0, 0.048),
+    0px 100px 80px rgba(0, 0, 0, 0.07);
+}
+.search-name{
+    color:var(--color-7);
+    font-size: 0.8rem;
+    text-transform: capitalize;
+}
+.search-img{
+    border-radius: 50%;
+    width: 2rem;
+    height: 2rem;
+}
 
 /* Inbox */
 .inbox-center{
@@ -446,15 +494,20 @@
     min-height: 4rem;
     box-sizing : border-box
 }
+@media screen and (max-width: 940px){
+    .compose-mobile-disabled, .inbox-mobile-disabled, .chat-mobile-disabled{
+        display: hidden;   
+    }
+    .chat-left, .chat-right, .compose-right, .compose-left{
+        display: none;
+    }
+}
 @media screen and (max-width: 600px){
     .sendingBox{
         width: 100%;
     }
     .chats-container{
         width: 40%;
-    }
-    .chat-left, .chat-right{
-        display: none;
     }
     .chat-title{
         width: 100%;
@@ -468,15 +521,17 @@
     .reply-box{
         width: 100%;
     }
-    .preview-container{
-        /* height: 140vh; */
-        /* margin-top: 25rem; */
-    }
     .message-img-preview-box{
         width: 100%;
         left: 0;
         transform: translateX(0%);
         top: 5rem;
+    }
+    .compose-mobile-disabled, .inbox-mobile-disabled, .chat-mobile-disabled{
+        display: none;   
+    }
+    .users-list{
+        width: 75%
     }
 }
 
@@ -493,5 +548,8 @@
     }
     .post-img-preview-box{
         width : 100%
+    }
+    .users-list{
+        width: 90%
     }
 }
